# gridiron-grpo

./: .gitignore  BLOG_OUTLINE.md  EXPERIMENTS.md  FINDINGS.md  FLAGSHIP_SPEC.md  JOURNEY.md  PAPER_OUTLINE.md  README.md  RESULTS_TEMPLATE.md  REVIEW.md  conftest.py  pyproject.toml  requirements.txt
agent/: nemo_agent_demo.py
configs/: grpo_config.yaml
environments/tabular_reasoning/: README.md  pyproject.toml  tabular_reasoning.py
environments/tabular_reasoning/configs/: tabular_reasoning.yaml
environments/tabular_reasoning/tests/: test_tabular_reasoning_env.py
flagship/: README.md  flagship.py  probe_supervised.py  task.py
scripts/: hf_job.sh  launch_phase1.sh  run_beta_sweep.sh  run_eval.sh  run_local.sh  run_passk.sh  run_train.sh  smoke_local.ps1  smoke_local.sh
src/: model_utils.py  prompts.py  train_grpo.py
src/data/: __init__.py  build_dataset.py  build_real_eval.py  generators.py  invoices_generators.py  invoices_tasks.py  tasks.py
src/eval/: __init__.py  aggregate.py  compare.py  evaluate.py  make_chart.py  make_hero.py  pass_at_k.py  results_to_md.py  stats.py
src/rewards/: __init__.py  verifiers.py
tests/: test_verifiers.py
